# Eruditus

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  chat_exporter  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
.ssh/: config
eruditus/: .env  .env.example  .env.sample  .flake8  .isort.cfg  config.py  eruditus.py  help.py
eruditus/app_commands/cron/: __init__.py
eruditus/buttons/: workon.py
eruditus/cogs/: cipher.py  ctf.py  ctftime.py  encoding.py  syscalls.py
eruditus/commands/: __init__.py  bookmark.py  cipher.py  ctftime.py  encoding.py  help.py  report.py  request.py  search.py  takenote.py
eruditus/components/: __init__.py
eruditus/constants/: __init__.py  channels.py  colors.py  emojis.py  errors.py  limits.py
eruditus/cronjobs/: __init__.py
eruditus/db/: __init__.py  base.py  challenge_repository.py  ctf_repository.py
eruditus/events/: __init__.py  scheduled_events.py
eruditus/forms/: contact.py  flag.py
eruditus/integrations/: __init__.py
eruditus/lib/: __init__.py  ctfd.py  ctftime.py  discord_util.py  payload_utils.py  types.py  util.py
eruditus/models/: __init__.py
eruditus/services/: __init__.py  challenge_service.py  scoreboard_service.py  solve_service.py
eruditus/tables/: arm  armthumb
eruditus/tasks/: __init__.py  challenge_puller.py  ctf_reminder.py  ctftime_leaderboard_tracker.py  ctftime_team_tracker.py  event_creator.py  event_manager.py  scoreboard_updater.py
eruditus/utils/: __init__.py  countries.py  crypto.py  discord.py  formatting.py  html.py  http.py  responses.py  time.py  validation.py  visualization.py
tests/: __init__.py  conftest.py  test_cipher_encoding.py  test_constants.py  test_ctftime_utils.py  test_formatting.py  test_http.py  test_integrations.py  test_models.py  test_platform_schemas.py  test_platforms.py  test_utils_http.py  test_utils_misc.py  test_validation.py  test_visualization.py
(+77 files in other folders)
